--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,10 @@ body button:Hover {
 p, h1, h2 {
   color: grey;
 }
+
+.cardRow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
 /*# sourceMappingURL=index.css.map */
