--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,25 @@ p, h1, h2 {
   color: grey;
 }
 
-.cardRow {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.card-container {
+  max-width: 1400px;
+  margin: 40px auto 0 auto;
+}
+
+@media (min-width: 900px) {
+  .card-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+.card {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 /*# sourceMappingURL=index.css.map */
