styled the header a bit

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+header {
+  background-color: grey;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+header h1 {
+  color: white;
+}
+
 body {
   background-color: white;
   text-align: center;
